--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,8 @@ services:
   - type: web
     name: vehicle-dashboard-backend
     env: python
-    rootDir: backend
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120
     envVars:
       - key: SPREADSHEET_ID
         sync: false
